force-app/main/default/objects/Drive_Participation__c/Drive_Participation__c.object-meta.xml
<CustomObject>
    <label>Drive Participation</label>
    <nameField>
        <displayFormat>DP-{0000}</displayFormat>
        <label>Drive Participation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drive Participations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>