force-app/main/default/objects/Drive_Participation__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Drive Participations</relationshipLabel>
    <relationshipName>Drive_Participations</relationshipName>
    <type>Lookup</type>
</CustomField>