force-app/main/default/objects/Drive_Participation__c/fields/EcoDrive__c.field-meta.xml
<CustomField>
    <fullName>EcoDrive__c</fullName>
    <label>EcoDrive</label>
    <referenceTo>EcoDrive__c</referenceTo>
    <relationshipLabel>Drive Participations</relationshipLabel>
    <relationshipName>Drive_Participations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>