force-app/main/default/objects/Drive_Participation__c/fields/Hours_Contributed__c.field-meta.xml
<CustomField>
    <fullName>Hours_Contributed__c</fullName>
    <label>Hours Contributed</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>