force-app/main/default/objects/Drive_Participation__c/fields/Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Volunteer__c</fullName>
    <label>Volunteer</label>
    <referenceTo>Volunteer__c</referenceTo>
    <relationshipLabel>Drive Participations</relationshipLabel>
    <relationshipName>Drive_Participations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>