force-app/main/default/objects/Drive_Participation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Attendance_Status__c</columns>
    <columns>EcoDrive__c</columns>
    <columns>Volunteer__c</columns>
    <columns>Hours_Contributed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>