force-app/main/default/objects/Drive_Participation__c/listViews/My_Registration.listView-meta.xml
<ListView>
    <fullName>My_Registration</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Registration</label>
</ListView>